# Python

./: 0001.py  0004.py  0005.py  Pessoas.xlsx  Tkinter1.py  bonito.py  cellenio.py  cellenio0002.py  chute.py  cores_terminal.py  equicel.py  g1.py  g1t.py  goog.py  im4gem.py  k0.py  m4rvel.py  m4rver2.py  tela_projeto__tkinter.py  testes_ekixel.py  votacao.py
Aulas_Curso_Em_Video/: 1.py  2.py  3.py
GRAFICOS_YOUTUBE/: 00.py
Guanabara/: 0.py  1.py  2.py  3.py  4.py  5.py  api-filmes.py  arrays.py  comeco.py  exer19.py  exer2.py  exer20.py  exer21.py  exer22.py  exer27.py  exer28.py  exer3.py  exer30.py  exer32.py  exer36.py  exer37.py  exer4.py  exer46.py  exer47.py  exer5.py  exer53.py  exer6.py  exer66.py  lacos.py  musica.py  par_ou_impar.py  pedra_papel_tesoura.py  pessaodubrazil.py  tabuada.py  tabuada3.py  teste-jogo.py  teste_os.py  teste_os2.py  teste_os3.py  tuit4r.py
Guanabara/selenium/: 01.py  (+1 more)
Kivy/: 0.py  main.kv  main.py  nome.kv
Selenium/: resete2.py  rsete.py
app1/: metaekissel.py
atom/: 0001.py
celular_app/: main.py
curso_em_video/: 0.py  1.py  2.py  3.py  4.py  aula09.py  aula10.py  escripte001.py  escripte002.py  exemplo01.py  exer0.py  exer1.py  exer10.py  exer11-pintando-pparede.py  exer13.py  exer16.py  exer17.py  exer18.py  exer2.py  exer20.py  exer22.py  exer24.py  exer25.py  exer27.py  exer28.py  exer29.py  exer3.py  exer30.py  exer4.py  exer5..py  exer6.py  exer7.py  exer8.py  exer9.py  res.py  site.py  sites2.py  sites3.py  sites4.py
metatrader/: pyproject.toml
pseudo__jogo/: index.py
web2.0/: aempre.html  projeto.html
(+17 files in other folders)
