[tool.poetry]
name = "metatrader"
version = "0.1.0"
description = ""
authors = ["SmokeBr <raiki_kage@hootmaiil.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
yes24 = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
